INTGW-521 basic auth handler

--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,7 @@
 		<module>components/webapps/quota-service</module>
 		<module>components/workflow-core</module>
 		<module>components/apim-loghandler</module>
+		<module>components/api-invocation-handler</module>
 		<module>features</module>
 		<module>components/oneapi</module>
 	</modules>
