[maven-release-plugin] prepare release v3_0_0

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<groupId>com.wso2telco.dep</groupId>
 	<artifactId>component-dep</artifactId>
 	<packaging>pom</packaging>
-        <version>3.0.1-SNAPSHOT</version>
+	<version>3.0.1-SNAPSHOT</version>
 	<name>WSO2Telco -Digital Enable Platform Component</name>
 	<description>WSO2Telco DEP Aggregate Pom</description>
 	<url>http://wso2telco.com</url>
@@ -164,7 +164,7 @@
 		<url>https://github.com/WSO2Telco/component-dep.git</url>
 		<developerConnection>scm:git:https://github.com/WSO2Telco/component-dep.git</developerConnection>
 		<connection>scm:git:https://github.com/WSO2Telco/component-dep.git</connection>
-		<tag>33</tag>
+		<tag>v3_0_0</tag>
 	</scm>
 
 	<repositories>
